--- a/app/views/tweeets/_who-to-follow.html.erb
+++ b/app/views/tweeets/_who-to-follow.html.erb
@@ -1,12 +1,14 @@
+
 <div class="column">
     <nav class="panel">
         <p class="panel-heading">Who To Follow</p>
     </nav>
+    <%@tweeets.each do |tweeet|%>
     <div class="panel-block">
         <article class="media">
             <div class="media-left">
                 <figure class="image is-32x32">
-                    <img src="https://bulma.io/images/placeholders/32x32.png">
+                     <%=gravatar_image_tag(tweeet.user.email,size:32,alt:tweeet.user.name)%>
                 </figure>
             </div>
             <div class="media-content">
@@ -21,7 +23,7 @@
         <article class="media">
             <div class="media-left">
                 <figure class="image is-32x32">
-                    <img src="https://bulma.io/images/placeholders/32x32.png">
+                     <%=gravatar_image_tag(tweeet.user.email,size:32,alt:tweeet.user.name)%>
                 </figure>
             </div>
             <div class="media-content">
@@ -36,7 +38,21 @@
         <article class="media">
             <div class="media-left">
                 <figure class="image is-32x32">
-                    <img src="https://bulma.io/images/placeholders/32x32.png">
+                   <%=gravatar_image_tag(tweeet.user.email,size:32,alt:tweeet.user.name)%>
+                </figure>
+            </div>
+            <div class="media-content">
+                <p>
+                    <strong>Jhon smth</strong>
+                    <small>@jhonsmith</small>
+                </p>
+            </div>
+        </article>
+    </div><div class="panel-block">
+        <article class="media">
+            <div class="media-left">
+                <figure class="image is-32x32">
+                   <%=gravatar_image_tag(tweeet.user.email,size:32,alt:tweeet.user.name)%>
                 </figure>
             </div>
             <div class="media-content">
@@ -47,4 +63,5 @@
             </div>
         </article>
     </div>
+<%end%>
 </div>
