--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -26,18 +26,23 @@
                     <small><%=tweeet.user.username%></small><br/>
                     <p><%= tweeet.tweeet%></p><br/>
                 </div>
-                <%if user_signed_in?%>
+                <%if user_signed_in? %>
                 <div class="level">
                     <div class="level-left is-mobile">
                         <%= link_to tweeet, class: "level-item" do %>
-                            <span class="icon">
+                        
+                             <span class="icon">
                                 <i class="fa fa-link"aria-hidden="true"></i></span>
-                                <%end%>
+                                <%end%>                     
+                           
+                                
+                                <% if tweeet.user.id==current_user.id%>
                                 <%= link_to edit_tweeet_path(tweeet), class: "level-item" do %>
                                 <span class="icon"><i class="fa fa-pencil"aria-hidden="true"></i></span>
                                 <% end %>
                                 <%= link_to tweeet,method: :delete,data: {confirm:"Are you sure you want to delete this tweet?"} do %>
                                 <span class="icon"><i class="fa fa-trash-o"aria-hidden="true"></i></span>
+                                <% end %>
                                 <% end %>
                                 </div>
                 </div>          
