--- a/app/views/tweeets/_profile.html.erb
+++ b/app/views/tweeets/_profile.html.erb
@@ -17,20 +17,25 @@
                 </div>
             </article>
         </div>
+  
         <div class="panel-block">
             <div class="level is-mobile">
                 <div class="level-item has-centered-text">
                     <div>
                         <p class="heading">Tweets</p>
                         <p class="title is-6">
+                         <%=link_to tweeets_path do %>
                             <%=current_user.tweeets.count%>
+                            <%end%>
                         </p>
                     </div>
                 </div>
                 <div class="level-item has-centered-text">
                     <div>
+                    <%=link_to friendships_path do %>
                         <p class="heading">Follower</p>
-                        <p class="title is-6">123</p>
+                        <p class="title is-6"><%=current_user.friendships.count%></p>
+                        <%end%>
                     </div>
                     
                     <div class="level-item has-centered-text">
