--- a/app/views/tweeets/_who-to-follow.html.erb
+++ b/app/views/tweeets/_who-to-follow.html.erb
@@ -2,27 +2,18 @@
     <nav class="panel">
         <p class="panel-heading">Who To Follow</p>
     </nav>
-    <%User.all.each do |user|%>
-    <div class="panel-block">
-        <article class="media">
-            <div class="media-left">
-                <figure class="image is-32x32">
-                     <%=gravatar_image_tag(user.email,size:32,alt:user.name)%>
-                </figure>
-            </div>
-              <%if user_signed_in? %> 
-            <div class="media-content">
-            <%if user == current_user%>
-               <%=user.name%><br/>
-               <p><b>Username: </b><%= user.username%>
-               <%else%>
-                <%=user.name%><br/>
-               <p><b>Username: </b><%= user.username%>
-               <p>Add friend</p>
-               <%end%>
-            </div>
-            <%end%>
-        </article>
-    </div>   
-<%end%>
-</div>
+
+<span>Add friends<span>
+<% @friendships.each do |user| %>
+<%if !current_user.friends.include?(user)%>
+<%if current_user!=user%>
+  <div class="user">
+    <p>
+      <strong><%=user.username %></strong>
+      <%= link_to "Add Friend", friendships_path(friend_id: user), :method => :post %>     
+      </p>
+  </div>
+  <%end%>
+  <%end%> 
+  <%end%>
+  
