--- a/app/views/tweeets/edit.js.erb
+++ b/app/views/tweeets/edit.js.erb
@@ -1,2 +1,6 @@
 $("#Edit-window").html("<%= j (render partial: 'edit') %>");
 $("#Edit-window").modal();
+
+$(".box").bind('ajax:success', function() {
+   $(this).closest('.box')
+});
