--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,1 +1,7 @@
-<%%>
+<%@comments.each do |comment|%>
+    <div>
+        <span>
+            <p>Comment <%=coment.comment%> </p>
+        </span>
+    </div>
+<%end%>
