--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -20,92 +20,89 @@
                 </figure>
             </div>
             <div class="media-content">
-                <div class="content">
-                    <strong><%=tweeet.user.name%></strong><br/>
-                    <small><%=tweeet.user.username%></small><br/>
-                    <p><%= tweeet.tweeet%></p><br/>
+                <div class="content d-flex justify-content-between">
+                    <div>
+                        <strong><%=tweeet.user.name%></strong><br/>
+                        <small><%=tweeet.user.username%></small><br/>
+                        <p style="font-size:16px; color:black"><%= tweeet.tweeet%></p><br/>
+                    </div>
+                    <div>
+                    <%if user_signed_in? %>
+                        <%if tweeet.user.id==current_user.id%>
+                            <%= link_to tweeet ,method: :delete,remote: true,class:"delete_tweeet",data: {confirm:"Are you sure you want to delete this tweet?"},class:"icon" do%>
+                                <span class="icon"><i class="bi bi-trash"aria-hidden="true"></i></span>                                
+                            <%end%>
+                        <%end%><%end%>
+                    </div>  
                 </div>
                 <%if user_signed_in? %>
-                    <div class="level">
-                        <div class="level-left is-mobile">
-                        
-                        
+                <hr>
+                    <div class="level d-flex justify-content-evenly flex-row">
+                        <%# <div class="level-left is-mobile" > %>
+                                    <%#Comments %>
+                            <div>
+                                <%= link_to  new_tweeet_comment_path(tweeet),remote: true,'data-bs-toggle' =>  "modal", 'data-bs-target' => '#CommentModal',class:"icon" do %>
+                                     <span>
+                                         <i class="bi bi-chat " style="width:10px; color:black;"></i>
+                                  </span>
+                                     <span>
+                                        <%=tweeet.comments.count%>  
+                                    </span>
+                                 <%end%>
+                                 
+                            </div>
+                                 
                         <%#Like Tweeet%>
                         
-                        <% pre_like = tweeet.likes.find { |like| like.user_id == current_user.id} %>
-                        <%if pre_like%>
-                        <div id = "dislike<%= tweeet.likes%>">
-                            <%=link_to tweeet_like_path(tweeet,pre_like),method: :delete,remote: true  do%>
-                            <i class="fa-solid fa-heart" style="color:rgb(249, 24, 128);"></i>
-                            <%end%>
+                            <div class="d-flex ">
+                                <% pre_like = tweeet.likes.find { |like| like.user_id == current_user.id} %>
+                                <%if pre_like%>
+                                    <div class="like" id = "dislike<%= tweeet.likes%>">
+                                        <%=link_to tweeet_like_path(tweeet,pre_like),method: :delete,class:"destroy_like icon",remote: true  do%>
+                                        <i class="fa-solid fa-heart" style="color:rgb(249, 24, 128);"></i>
+                                        <%end%>
+                                    </div>
+                                <%else%>     
+                                    <div id = "like">
+                                    <%=link_to tweeet_likes_path(tweeet) ,method: :post,remote: true,class:"icon" do %>
+                                                <span class="icon"><i class="fa-regular fa-heart"style="color:gray;"></i></span>
+                                        <%end%>
+                                    </div>
+                                <%end%>
+                                <%=tweeet.likes.count%>
                         </div>
-                        <%else%>     
-                        <div id = "like">
-                        <%=link_to tweeet_likes_path(tweeet) ,method: :post,remote: true do %>
-                                    <span class="icon"><i class="fa-regular fa-heart"style="color:gray;"></i></span>
-                            <%end%>
-                            <script>
-                            var = tweeet
-                            $("#like").click(function(){
-                                debugger
-                                $.ajax({
-                                    type: "POST",
-                                    url: `/tweeets/+${{tweeet_id: var}}+/likes`,
-                                    data:"",
-                                    dataType: 'script',
-                                    success: function (result) {
-                                        console.log("Ajax callback function");
-                                    }
-                                });
-                            });
-                            </script>
-                        </div>
-                        <%end%>
-                        <%=tweeet.likes.count%>
-                            <%= link_to tweeet, class: "level-item" do %>
+                        
+                        <div>
+                            <%= link_to tweeet, class: "level-item icon" do %>
                                 <span class="icon"><i class="fa fa-link"aria-hidden="true"></i></span>
                             <%end%>        
+                        </div>
                             <%# Edit the tweeet  %>
-                            
+                        <div>
                             <% if tweeet.user.id==current_user.id%>
-                                <%= link_to edit_tweeet_path(tweeet),class: "level-item",:remote => true, 'data-bs-toggle' =>  "modal", 'data-bs-target' => '#Edit-window', class: 'btn btn-primary btn-lg' do %>
+                                <%= link_to edit_tweeet_path(tweeet),class: "level-item",:remote => true, 'data-bs-toggle' =>  "modal", 'data-bs-target' => '#Edit-window' ,class:"icon" do %>
                                     <span class="icon"><i class="fa fa-pencil"aria-hidden="true"></i></span>
                                 <% end %>
                                 <div id="Edit-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                              <div class="modal-dialog" role="document">
-                                <div class="Edit-content"></div>
-                              </div>
-                            </div>
-                            
-                            
-                            <%#Delete the tweeet %>
-                                <%= link_to tweeet,method: :delete,remote: true,class:"delete",data: {confirm:"Are you sure you want to delete this tweet?"} do %>
-                                    <span class="icon"><i class="fa fa-trash"aria-hidden="true"></i></span>
-                                <% end %>
-                            <% end %>
+                                    <div class="modal-dialog" role="document">
+                                        <div class="Edit-content"></div>
+                                    </div>
+                                </div>
                         </div>
-                    </div>          
-                    
-                    
-                    
-                    <%Comment.all.each do |coment|%>
-                        <%if tweeet.id==coment.tweeet_id%>
-                            <%=coment.comment%>
-                        <%end%>
-                    <%end%>
-                    
-                <%end%>         
+                            <%#Delete the tweeet %>
+                        
+                            <% end %>
+                        
+                    <%# </div>   %>
+                <%end%> 
+               
             </div>
         </article>
-        <%= link_to 'new comment' , new_tweeet_comment_path(tweeet), remote: true, 'data-bs-toggle' =>  "modal", 'data-bs-target' => '#CommentModal'%>
-        
-        
-        
-
     </div>
-   
     <%end%>
-    
-
-
+</div>
+<div id="CommentModal" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="Comment-content"></div>
+    </div>
 </div>
