--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,3 +1,3 @@
 $('.delete_comment').bind('ajax:success', function() {
-   $(this).closest('.comment').fadeOut();
+   $(this).closest('.comment-box').fadeOut();
 });
