--- a/app/views/likes/toggle.js.erb
+++ b/app/views/likes/toggle.js.erb
@@ -1,1 +1,1 @@
-$("#tweet_<%=@tweeet.id%>").html(<%= j render 'likes/toggle',tweeet_id: @tweeet.id %>);
+$("#tweet_<%=@tweeet.id%>").html('<%= j render 'likes/toggle',tweeet_id: @tweeet.id %>');
