--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,8 @@
- <div class="card-text">
 <%Comment.all.each do |comment|%>
-            <%if comment.tweeet_id==@tweeet.id%>
-           <hr>
-            <div class="comment d-flex justify-content-between" id='<%comment.id%>'>        
-             <div >
+    <%if comment.tweeet_id==@tweeet.id%>
+        <hr>
+        <div class="comment d-flex justify-content-between" >    
+            <div >
                 <%if @tweeet.id==comment.tweeet_id%>
                     <%=comment.comment%>
                 <%end%>            
@@ -11,11 +10,10 @@
                <%if comment.user.id==current_user.id%>
             <div >
               <%=link_to tweeet_comment_path(@tweeet,comment),remote: true , method: :delete,class:"delete_comment",data: {confirm:"Are you sure you want to delete this Comment?"} do %>
-              <span class="icon"><i class="bi bi-trash"aria-hidden="true"></i></span> 
+              <span class="icon"><i class="bi bi-trash"aria-hidden="true" ></i></span> 
               <%end%>
-           </div>    
+            </div>    
             <%end%>           
-          <%end%>   
-       </div>
-   <%end%>
-   </div>
+        </div>
+    <%end%>   
+<%end%>
