--- a/app/views/comments/_create.html.erb
+++ b/app/views/comments/_create.html.erb
@@ -1,9 +1,21 @@
-
-<div class="modal-header">
-  <button type="button" class="close" data-bs-dismiss="modal">x</button>
-  <h4 class="modal-title" id="myModalLabel">Create Comment</h4>
-</div>
-<div class="modal-body">
-<%= render 'form', coment: @comment %>
-</div>
-
+<%Comment.all.each do |comment|%>
+    <%if comment.tweeet_id==@tweeet.id%>
+        <hr>
+        <div class="comment d-flex justify-content-between" id="comment_<%=comment.id%>" >    
+            <div >
+                <%if @tweeet.id==comment.tweeet_id%>
+                
+                    <%=comment.user.name%>
+                    <%=comment.comment%>
+                <%end%>            
+            </div>
+        <%if comment.user.id==current_user.id%>
+            <div >
+              <%=link_to tweeet_comment_path(@tweeet,comment),remote: true , method: :delete,class:"delete_comment",data: {confirm:"Are you sure you want to delete this Comment?"} do %>
+              <span class="icon"><i class="bi bi-trash"aria-hidden="true"></i></span> 
+              <%end%>
+            </div>    
+        <%end%>           
+        </div>
+    <%end%>   
+<%end%>
