--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,7 +1,11 @@
+<div class="modal-dialog">
+<div class="modal-content">
 <div class="modal-header">
-  <button type="button" class="close" data-bs-dismiss="modal">x</button>
-  <h4 class="modal-title" id="myModalLabel">Create Comment</h4>
+        <h5 class="modal-title" id="exampleModalLabel">New Comment</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 <div class="modal-body">
-<%= render 'form'%>
+	<%= render 'form'%>
+</div>
+</div>
 </div>
