--- a/app/views/tweeets/_edit.html.erb
+++ b/app/views/tweeets/_edit.html.erb
@@ -1,8 +1,13 @@
-<div class="modal-header">
-  <button type="button" class="close" data-bs-dismiss="modal">x</button>
-  <h4 class="modal-title" id="myModalLabel">Editing Tweeet</h4>
+<div class="modal-dialog">
+	<div class="modal-content">
+		<div class="modal-header">
+		    <h5 class="modal-title" id="exampleModalLabel">Edit Tweeet</h5>
+		    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+			<%= render 'form', tweeet: @tweeet %>
+		</div>
+	</div>
 </div>
-<div class="modal-body">
-<%= render 'form', tweeet: @tweeet %>
-</div>
+
 
