--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -1,6 +1,6 @@
 <div class="column is-half">
 <%if user_signed_in?%>
-    <article class="media box">
+    <article class="media-box">
         <figure class="media-left">
             <p class="image is-64x64">
                 <%=gravatar_image_tag(current_user.email,size:64,alt:current_user.name)%>
@@ -12,7 +12,7 @@
     </article>
 <% end %>
 <% @tweeets.each do |tweeet| %>
-    <div class="box">
+    <div class="box" id="<%=tweeet.id%>">
         <article class="media">
             <div class="media-left">
                 <figure class="image is-64x64">
@@ -20,19 +20,20 @@
                 </figure>
             </div>
             <div class="media-content">
-                <div class="content d-flex justify-content-between">
+                <div class="content d-flex justify-content-between",id="tweeet_<%=tweeet.id%>">
                     <div>
                         <strong><%=tweeet.user.name%></strong><br/>
                         <small><%=tweeet.user.username%></small><br/>
-                        <p style="font-size:16px; color:black"><%= tweeet.tweeet%></p><br/>
+                        <p style="font-size:16px; color:black"><%=tweeet.tweeet%></p><br/>
                     </div>
                     <div>
                     <%if user_signed_in? %>
                         <%if tweeet.user.id==current_user.id%>
-                            <%= link_to tweeet ,method: :delete,remote: true,class:"delete_tweeet",data: {confirm:"Are you sure you want to delete this tweet?"},class:"icon" do%>
+                                <%= link_to tweeet ,method: :delete,remote: true,class:"delete_tweeet",data: {confirm:"Are you sure you want to delete this tweet?"} do%>
                                 <span class="icon"><i class="bi bi-trash"aria-hidden="true"></i></span>                                
                             <%end%>
-                        <%end%><%end%>
+                        <%end%>
+                        <%end%>
                     </div>  
                 </div>
                 <%if user_signed_in? %>
@@ -52,11 +53,12 @@
                                  
                             </div>
                         <%#Like Tweeet%>
-                            <div class="d-flex ">
-                        <%=render "likes/toggle",tweeet_id: tweeet.id%>
-                               <%=tweeet.likes.count%>
-                        </div>
-                        
+                            <div class="d-flex " id='tweet_<%=tweeet.id%>'>
+                                <%# <%debugger%>
+                                
+                                <%=render "likes/toggle",tweeet_id: tweeet.id%>
+                                <%=tweeet.likes.count%>
+                            </div>
                         <div>
                             <%= link_to tweeet, class: "level-item icon" do %>
                                 <span class="icon"><i class="fa fa-link"aria-hidden="true"></i></span>
@@ -73,12 +75,8 @@
                                         <div class="Edit-content"></div>
                                     </div>
                                 </div>
-                        </div>
-                            <%#Delete the tweeet %>
-                        
                             <% end %>
-                        
-                    <%# </div>   %>
+                        </div>
                 <%end%> 
                
             </div>
