--- a/app/views/tweeets/destroy.js.erb
+++ b/app/views/tweeets/destroy.js.erb
@@ -1,3 +1,3 @@
 $('.delete_tweeet').bind('ajax:success', function() {
-   $(this).closest('.box').fadeOut();
+   $(this).closest("#<%=@tweeet.id%>").fadeOut();
 });
