--- a/app/views/tweeets/show.html.erb
+++ b/app/views/tweeets/show.html.erb
@@ -7,27 +7,27 @@
     <h5 class="card-header"><%= @tweeet.tweeet %></h5> 
     <div class="d-flex justify-content-evenly flex-row my-2 ">
         <div>
-        <%= link_to  new_tweeet_comment_path(@tweeet),remote: true,'data-bs-toggle' =>  "modal", 'data-bs-target' => '#CommentModal',class:"icon"  do %>
-	        <span>
-            <i class="bi bi-chat" style="width:10px; color:black;"></i>
-            </span>
-        <%end%>
-        <span class="count">
-            <%=@tweeet.comments.count%>  
-       </span>
-   </div>
-   <div class="d-flex" id="tweet_<%=@tweeet.id%>">
-       <%=render 'likes/toggle',tweeet_id:@tweeet.id%>
-         <%=@tweeet.likes.count%>  
+            <%= link_to  new_tweeet_comment_path(@tweeet),remote: true,'data-bs-toggle' =>  "modal", 'data-bs-target' => '#CommentModal',class:"icon"  do %>
+    	        <span>
+                <i class="bi bi-chat" style="width:10px; color:black;"></i>
+                </span>
+            <%end%>
+            <span class="count">
+                <%=@tweeet.comments.count%>  
+           </span>
+       </div>
+       <div class="d-flex" id="tweet_<%=@tweeet.id%>">
+           <%=render 'likes/toggle',tweeet_id: @tweeet.id%>
+        </div>
     </div>
-  </div>
   <hr>
  
     <div class="card-body">
-        <h5 class="card-title">Comment</h5>       
-          <%=render "comments/comment"%>        
+        <h5 class="card-title">Comment</h5>  
+          <div id= "comment">
+          <%=render "comments/create"%>        
+        </div>
     </div>
-</div>
 
 <div id="CommentModal" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
