--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$('#comment_<%=@tweeet.id%>').html("<%= j (render 'comments/create')%>"
+$('#comment_<%=@tweeet.id%>').html("<%= j (render 'comments/create')%>")
