--- a/app/views/comments/new.js.erb
+++ b/app/views/comments/new.js.erb
@@ -1,3 +1,6 @@
 $("#CommentModal").html("<%= j (render 'new') %>");
 $("#CommentModal").modal();
+$("#CommenT").click(function(){
+    $("#CommentModal").modal('hide')
+})
 
