--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -11,6 +11,7 @@
         </div>
     </article>
 <% end %>
+<div class="feed_tweeet">
 <% @tweeets.each do |tweeet| %>
     <div class="box" id="<%=tweeet.id%>">
         <article class="media">
