--- a/app/views/tweeets/show.html.erb
+++ b/app/views/tweeets/show.html.erb
@@ -24,7 +24,7 @@
  
     <div class="card-body">
         <h5 class="card-title">Comment</h5>  
-          <div id= "comment">
+          <div id= "comment_<%=@tweeet.id%>">
           <%=render "comments/create"%>        
         </div>
     </div>
