--- a/app/views/tweeets/updeat.js.erb
+++ b/app/views/tweeets/updeat.js.erb
@@ -1,1 +1,1 @@
-$(#"tweeet_<%=tweeet.id%>").html("<%= j (render partial: "edit"),tweeet_id: @tweeet.id %>")
+$(#"tweeet_<%=tweeet.id%>").html("<%= j (render partial: "update"),tweeet_id: @tweeet.id %>")
