--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,12 +1,12 @@
-
+<div id="form_comment">
 <%=form_for(@comment, url: tweeet_comments_path,remote: true) do |form|%> 
     <div >
         <%=form.hidden_field :user_id ,value: current_user.id%>
         <%=form.label :comment%> 
         <%= form.text_area :comment,class:"textarea form-control"%>
          <div class="modal-footer">
-        <%=form.submit :comment, class:"btn btn-primary my-3"%> 
+        <%=form.submit :comment, class:"btn btn-primary my-3" ,id:"CommenT"%> 
         <div>
     </div>
 <%end%>
-    
+    </div>
