--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-dialog">
+<div class="modal-dialog" id="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">New Comment</h5>
