--- a/app/views/tweeets/create.js.erb
+++ b/app/views/tweeets/create.js.erb
@@ -1,3 +1,3 @@
-$('.create_tweeet').bind('ajax:success', function() {
-   $(this).closest('.box').fadeIn();
+$(function () {
+  $(".create_tweeet").validate();
 });
